--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,8 @@
     "preview": {
       "android": {
         "buildType": "apk"
-      }
+      },
+      "distribution": "internal"
     },
     "preview2": {
       "android": {
