Set for internal distribution

--- a/eas.json
+++ b/eas.json
@@ -3,6 +3,10 @@
     "version": ">= 2.1.0"
   },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
     "preview": {
       "android": {
         "buildType": "apk"
@@ -13,9 +17,6 @@
       "android": {
         "gradleCommand": ":app:assembleRelease"
       }
-    },
-    "preview3": {
-      "developmentClient": true
     },
     "production": {}
   },
